fixed input type button

--- a/optic/css/style.css
+++ b/optic/css/style.css
@@ -1099,6 +1099,7 @@ main {
   -o-transition: all .5s;
   transition: all .5s;
   -webkit-appearance: none;
+  border-radius: 0;
 }
 
 .clientCart__form form input[type='button']:hover {
