--- a/optic/css/style.css
+++ b/optic/css/style.css
@@ -371,6 +371,16 @@ main {
   display: none;
 }
 
+.header,
+.footer,
+.section {
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+}
+
 .content {
   margin: 0 auto;
 }
@@ -1258,6 +1268,10 @@ main {
   transition: all .5s;
 }
 
+.where__map .map {
+  height: 100%;
+}
+
 .where__heading {
   text-align: center;
 }
@@ -1348,6 +1362,7 @@ main {
   top: 0;
   background-color: #ff7900;
   padding: 35px 54px 20px 37px;
+  z-index: 1;
 }
 
 .where__phone {
@@ -1711,6 +1726,207 @@ main {
 
 .thank__heading {
   font-weight: 700;
+}
+
+.send__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.send__heading {
+  max-width: 560px;
+}
+
+.send__form {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 calc(50% - 30px);
+          flex: 0 0 calc(50% - 30px);
+  margin-right: 60px;
+}
+
+.send__form form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.send__form form p {
+  color: #9a9a9a;
+  line-height: 28px;
+}
+
+.send__form form .send__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.send__form form .send__box input {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 calc(50% - 10px);
+          flex: 0 0 calc(50% - 10px);
+  padding: 11px 18px;
+  border: 2px solid #ddd;
+}
+
+.send__form form .send__box input:first-of-type {
+  margin-right: 20px;
+}
+
+.send__form form textarea {
+  padding: 11px 18px;
+  border: 2px solid #ddd;
+}
+
+.send__form form input[type="submit"] {
+  max-width: 240px;
+}
+
+.send__google {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  position: relative;
+  background-image: url("../../img/googleBg.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.send__google__content {
+  max-width: 365px;
+}
+
+.send__google .send__select {
+  position: relative;
+}
+
+.send__google .send__select > p {
+  width: 100%;
+  background-color: #fff4ea;
+  padding: 17px 35px 14px 56px;
+  color: #ff7900;
+  position: relative;
+  font-weight: 600;
+}
+
+.send__google .send__select > p::before {
+  content: "\e90b";
+  font-family: 'icomoon';
+  position: absolute;
+  left: 14px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.send__google .send__select > p span:first-of-type {
+  color: #ff7900;
+  letter-spacing: 0.02em;
+}
+
+.send__google .send__select > p span:nth-of-type(2),
+.send__google .send__select > p span:nth-of-type(3) {
+  display: inline-block;
+  position: absolute;
+  border-radius: 50px;
+  background-color: #ff7900;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+}
+
+.send__google .send__select > p span:nth-of-type(2) {
+  -webkit-transform: rotate(35deg);
+      -ms-transform: rotate(35deg);
+          transform: rotate(35deg);
+  -webkit-transform-origin: right;
+      -ms-transform-origin: right;
+          transform-origin: right;
+}
+
+.send__google .send__select > p span:nth-of-type(3) {
+  -webkit-transform: rotate(-35deg);
+      -ms-transform: rotate(-35deg);
+          transform: rotate(-35deg);
+  -webkit-transform-origin: left;
+      -ms-transform-origin: left;
+          transform-origin: left;
+}
+
+.send__google .send__select > p.active span:nth-of-type(2) {
+  -webkit-transform: rotate(-35deg);
+      -ms-transform: rotate(-35deg);
+          transform: rotate(-35deg);
+}
+
+.send__google .send__select > p.active span:nth-of-type(3) {
+  -webkit-transform: rotate(35deg);
+      -ms-transform: rotate(35deg);
+          transform: rotate(35deg);
+}
+
+.send__google .send__options {
+  display: none;
+  position: absolute;
+  width: 100%;
+  background-color: #fff;
+  padding: 3px 0;
+}
+
+.send__google .send__options > p {
+  padding: 5px 16px;
+  border: 1px solid #ddd;
+  background-color: #fff;
+  margin-top: 1px;
+  cursor: pointer;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+}
+
+.send__google .send__options > p:hover {
+  background-color: #fff4ea;
+  color: #ff7900;
+}
+
+.send__google .send__options > p > span:last-of-type {
+  display: none;
+}
+
+.send__google .button {
+  background-color: #fff;
+  color: #ff7900;
+  -webkit-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+}
+
+.send__google .button:hover {
+  cursor: pointer;
+  background-color: #ff7900;
+  color: #fff;
 }
 
 @media (min-width: 767px) {
@@ -2260,6 +2476,110 @@ main {
 
   .thank__heading {
     font-size: calc(18px + 42 * (100vw / 1440));
+  }
+
+  .send {
+    padding-top: calc(25px + 30 * (100vw / 1440));
+  }
+
+  .send {
+    padding-bottom: calc(0px + 80 * (100vw / 1440));
+  }
+
+  .send__heading {
+    margin-top: calc(0px + 8 * (100vw / 1440));
+  }
+
+  .send__heading {
+    margin-bottom: calc(0px + 22 * (100vw / 1440));
+  }
+
+  .send__form form p {
+    font-size: calc(10px + 8 * (100vw / 1440));
+  }
+
+  .send__form form .send__stars {
+    margin-top: calc(0px + 5 * (100vw / 1440));
+  }
+
+  .send__form form .send__stars {
+    margin-bottom: calc(15px + 7 * (100vw / 1440));
+  }
+
+  .send__form form textarea {
+    margin-top: calc(9px + 7 * (100vw / 1440));
+  }
+
+  .send__form form textarea {
+    margin-bottom: calc(12px + 3 * (100vw / 1440));
+  }
+
+  .send__google {
+    height: calc(175px + 61 * (100vw / 1440));
+  }
+
+  .send__google {
+    bottom: calc(0px + 66 * (100vw / 1440));
+  }
+
+  .send__google .send__select {
+    margin-bottom: calc(10px + -4 * (100vw / 1440));
+  }
+
+  .send__google .send__select > p {
+    padding-top: calc(13px + 4 * (100vw / 1440));
+  }
+
+  .send__google .send__select > p {
+    padding-bottom: calc(13px + 4 * (100vw / 1440));
+  }
+
+  .send__google .send__select > p {
+    padding-right: calc(30px + 10 * (100vw / 1440));
+  }
+
+  .send__google .send__select > p {
+    padding-left: calc(46px + 10 * (100vw / 1440));
+  }
+
+  .send__google .send__select > p::before {
+    font-size: calc(19px + 6 * (100vw / 1440));
+  }
+
+  .send__google .send__select > p span:first-of-type {
+    font-size: calc(11px + 3 * (100vw / 1440));
+  }
+
+  .send__google .send__select > p span:nth-of-type(2),
+  .send__google .send__select > p span:nth-of-type(3) {
+    width: calc(10px + 6 * (100vw / 1440));
+  }
+
+  .send__google .send__select > p span:nth-of-type(2),
+  .send__google .send__select > p span:nth-of-type(3) {
+    height: calc(2px + 2 * (100vw / 1440));
+  }
+
+  .send__google .send__select > p span:nth-of-type(2),
+  .send__google .send__select > p span:nth-of-type(3) {
+    bottom: calc(16px + 2 * (100vw / 1440));
+  }
+
+  .send__google .send__select > p span:nth-of-type(2) {
+    right: calc(27px + 1 * (100vw / 1440));
+  }
+
+  .send__google .send__select > p span:nth-of-type(3) {
+    right: calc(16px + -2 * (100vw / 1440));
+  }
+
+  .send__google .send__select > p.active span:nth-of-type(2),
+  .send__google .send__select > p.active span:nth-of-type(3) {
+    bottom: calc(24px + 2 * (100vw / 1440));
+  }
+
+  .send__google .send__options > p {
+    font-size: calc(11px + 3 * (100vw / 1440));
   }
 }
 
@@ -2822,6 +3142,110 @@ main {
 
   .thank__heading {
     font-size: 60px;
+  }
+
+  .send {
+    padding-top: 55px;
+  }
+
+  .send {
+    padding-bottom: 80px;
+  }
+
+  .send__heading {
+    margin-top: 8px;
+  }
+
+  .send__heading {
+    margin-bottom: 22px;
+  }
+
+  .send__form form p {
+    font-size: 18px;
+  }
+
+  .send__form form .send__stars {
+    margin-top: 5px;
+  }
+
+  .send__form form .send__stars {
+    margin-bottom: 22px;
+  }
+
+  .send__form form textarea {
+    margin-top: 16px;
+  }
+
+  .send__form form textarea {
+    margin-bottom: 15px;
+  }
+
+  .send__google {
+    height: 236px;
+  }
+
+  .send__google {
+    bottom: 66px;
+  }
+
+  .send__google .send__select {
+    margin-bottom: 6px;
+  }
+
+  .send__google .send__select > p {
+    padding-top: 17px;
+  }
+
+  .send__google .send__select > p {
+    padding-bottom: 17px;
+  }
+
+  .send__google .send__select > p {
+    padding-right: 40px;
+  }
+
+  .send__google .send__select > p {
+    padding-left: 56px;
+  }
+
+  .send__google .send__select > p::before {
+    font-size: 25px;
+  }
+
+  .send__google .send__select > p span:first-of-type {
+    font-size: 14px;
+  }
+
+  .send__google .send__select > p span:nth-of-type(2),
+  .send__google .send__select > p span:nth-of-type(3) {
+    width: 16px;
+  }
+
+  .send__google .send__select > p span:nth-of-type(2),
+  .send__google .send__select > p span:nth-of-type(3) {
+    height: 4px;
+  }
+
+  .send__google .send__select > p span:nth-of-type(2),
+  .send__google .send__select > p span:nth-of-type(3) {
+    bottom: 18px;
+  }
+
+  .send__google .send__select > p span:nth-of-type(2) {
+    right: 28px;
+  }
+
+  .send__google .send__select > p span:nth-of-type(3) {
+    right: 14px;
+  }
+
+  .send__google .send__select > p.active span:nth-of-type(2),
+  .send__google .send__select > p.active span:nth-of-type(3) {
+    bottom: 26px;
+  }
+
+  .send__google .send__options > p {
+    font-size: 14px;
   }
 }
 
@@ -4033,6 +4457,110 @@ main {
 
   .thank__heading {
     font-size: calc(18px + 71.4 * ((100vw - 320px) / 1440));
+  }
+
+  .send {
+    padding-top: calc(25px + 51 * ((100vw - 320px) / 1440));
+  }
+
+  .send {
+    padding-bottom: calc(0px + 136 * ((100vw - 320px) / 1440));
+  }
+
+  .send__heading {
+    margin-top: calc(0px + 13.6 * ((100vw - 320px) / 1440));
+  }
+
+  .send__heading {
+    margin-bottom: calc(0px + 37.4 * ((100vw - 320px) / 1440));
+  }
+
+  .send__form form p {
+    font-size: calc(10px + 13.6 * ((100vw - 320px) / 1440));
+  }
+
+  .send__form form .send__stars {
+    margin-top: calc(0px + 8.5 * ((100vw - 320px) / 1440));
+  }
+
+  .send__form form .send__stars {
+    margin-bottom: calc(15px + 11.9 * ((100vw - 320px) / 1440));
+  }
+
+  .send__form form textarea {
+    margin-top: calc(9px + 11.9 * ((100vw - 320px) / 1440));
+  }
+
+  .send__form form textarea {
+    margin-bottom: calc(12px + 5.1 * ((100vw - 320px) / 1440));
+  }
+
+  .send__google {
+    height: calc(175px + 103.7 * ((100vw - 320px) / 1440));
+  }
+
+  .send__google {
+    bottom: calc(0px + 112.2 * ((100vw - 320px) / 1440));
+  }
+
+  .send__google .send__select {
+    margin-bottom: calc(10px + -6.8 * ((100vw - 320px) / 1440));
+  }
+
+  .send__google .send__select > p {
+    padding-top: calc(13px + 6.8 * ((100vw - 320px) / 1440));
+  }
+
+  .send__google .send__select > p {
+    padding-bottom: calc(13px + 6.8 * ((100vw - 320px) / 1440));
+  }
+
+  .send__google .send__select > p {
+    padding-right: calc(30px + 17 * ((100vw - 320px) / 1440));
+  }
+
+  .send__google .send__select > p {
+    padding-left: calc(46px + 17 * ((100vw - 320px) / 1440));
+  }
+
+  .send__google .send__select > p::before {
+    font-size: calc(19px + 10.2 * ((100vw - 320px) / 1440));
+  }
+
+  .send__google .send__select > p span:first-of-type {
+    font-size: calc(11px + 5.1 * ((100vw - 320px) / 1440));
+  }
+
+  .send__google .send__select > p span:nth-of-type(2),
+  .send__google .send__select > p span:nth-of-type(3) {
+    width: calc(10px + 10.2 * ((100vw - 320px) / 1440));
+  }
+
+  .send__google .send__select > p span:nth-of-type(2),
+  .send__google .send__select > p span:nth-of-type(3) {
+    height: calc(2px + 3.4 * ((100vw - 320px) / 1440));
+  }
+
+  .send__google .send__select > p span:nth-of-type(2),
+  .send__google .send__select > p span:nth-of-type(3) {
+    bottom: calc(16px + 3.4 * ((100vw - 320px) / 1440));
+  }
+
+  .send__google .send__select > p span:nth-of-type(2) {
+    right: calc(27px + 1.7 * ((100vw - 320px) / 1440));
+  }
+
+  .send__google .send__select > p span:nth-of-type(3) {
+    right: calc(16px + -3.4 * ((100vw - 320px) / 1440));
+  }
+
+  .send__google .send__select > p.active span:nth-of-type(2),
+  .send__google .send__select > p.active span:nth-of-type(3) {
+    bottom: calc(24px + 3.4 * ((100vw - 320px) / 1440));
+  }
+
+  .send__google .send__options > p {
+    font-size: calc(11px + 5.1 * ((100vw - 320px) / 1440));
   }
 }
 
